# AI-WorkFlow

./: .cursorrules  .gitignore  README.md  pyproject.toml
src/api_server/: config.py  main.py
src/api_server/api/: deps.py  errors.py
src/api_server/api/api_v1/: __init__.py  ai_workflow_def.py  ai_workflow_job.py  debug.py  models.py  providers.py
src/api_server/crud/: __init__.py  base.py  crud_ai_workflow_def.py  crud_ai_workflow_job.py  crud_model.py  crud_provider.py
src/api_server/models/: ai_workflow_def.py  ai_workflow_job.py  base.py  dl_models.py  model_providers.py
src/api_server/utils/: common_utils.py  logging_config.py  middleware.py
