[project]
name = "ai-workflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.19.0",
    "asyncmy>=0.2.9",
    "colorlog>=6.9.0",
    "fastapi>=0.116.1",
    "greenlet>=2.0.0",
    "haystack-ai>=2.16.1",
    "pydantic-settings>=2.0.0",
    "sentry-sdk>=2.34.1",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.35.0",
]
